fixed spacing between pictures
adjusted code for spacing

--- a/src/styles/components/newsletter/newsletter.module.scss
+++ b/src/styles/components/newsletter/newsletter.module.scss
@@ -80,5 +80,6 @@
     width: auto;
     height: auto;
     border-radius: 8px;
-    margin-right: 10px;
+    margin-right: 40px;
+    margin-left: 40px;
 }
